package com.github.mayconr.juoserver.game.world;

import com.github.mayconr.juoserver.infrastructure.rng.RNG;

public interface World extends WorldView, WorldActions, RNG {
}
