@startuml

title JUOForge Architecture Map

package "WORLD" #DDEEFF {

class World {
    +mobiles
    +items
    +update()
}

}

package "DOMAIN" #E6F2FF {
    package "Mobile Module" {
        class MobileModule
    }
}

package "GAMEPLAY FLOWS" #FFE6E6 {

class DamageFlow
class DeathFlow

class DamageContext
class DeathContext

DamageFlow --> DamageContext
DeathFlow --> DeathContext

DamageFlow --> DeathFlow : lethal damage

}

package "FLOW ENGINE" #E6FFE6 {

class Flow
class Step
class FlowContext

Flow --> Step
Flow --> FlowContext

DamageFlow --> Flow
DeathFlow --> Flow

}

package "EVENT SYSTEM" #FFF5CC {

class EventBus

}

package "GAME SERVICES" #F3E6FF {

class DamageService
class DeathService

}

World --> MobileModule

DamageService --> DamageFlow
DamageService --> MobileService

DeathService --> DeathFlow
DeathService --> MobileService

DamageFlow --> Mobile
DeathFlow --> Mobile

DamageFlow --> EventBus
DeathFlow --> EventBus

EventBus --> DeathFlow : death trigger

@enduml